2000-10-24  Kevin Buettner  <kevinb@redhat.com>

	* solib-svr4.c: New file created out of much of solib.c...
	* solib.c (_SYSCALL32, BKPT_AT_SYMBOL): Move these defines to
	solib-svr4.c.
	(sys/types.h, signal.h, sys/param.h, fcntl.h, a.out.h,
	elf/external.h, link.h): Move these includes to solib-svr4.c.
	(bkpt_names, debug_base_symbols, main_name_list,
	solib_extract_address, SOLIB_EXTRACT_ADDRESS, dynamic_copy,
	ld_2_copy, debug_addr, flag_addr, LM_ADDR, LM_NEXT, LM_NAME,
	IGNORE_FIRST_LINK_MAP_ENTRY, breakpoint_addr,
	allocate_rt_common_objfile, solib_add_common_symbols,
	bfd_lookup_symbol, look_for_base, elf_locate_base, locate_base,
	first_link_map_member, open_symbol_file_object, match_main,
	current_sos, interp_text_sect_low, interp_text_sect_high,
	interp_plt_sect_low, interp_plt_sect_high,
	in_svr4_dynsym_resolve_code, disable_break, enable_break,
	special_symbol_handling): Moved to solib-svr4.c.
	(debug32_copy, shadow_contents, fdmatch)
	Removed entirely.
	(struct so_list): Moved to solist.h
	(MAX_PATH_SIZE): Moved to solist.h and renamed to
	SO_NAME_MAX_PATH_SIZE.

	* solist.h: New file created from struct so_list in solib.c.
	(struct lm_info): Add forward declaration.
	(struct so_list): Remove fields lm, lm32, lmaddr.  Replace with a
	single field, lm_info, which will be a pointer to target specific
	data.
	(struct target_so_ops): New struct.
	(free_so): Add extern declaration.
	(current_target_so_ops): Declare new global variable.
	(solib_map_sections): 
	(TARGET_SO_LM_ADDR, TARGET_SO_FREE_SO, TARGET_SO_CLEAR_SOLIB,
	TARGET_SO_SOLIB_CREATE_INFERIOR_HOOK,
	TARGET_SO_SPECIAL_SYMBOL_HANDLING, TARGET_SO_CURRENT_SOS,
	TARGET_SO_OPEN_SYMBOL_FILE_OBJECT):  New macros.
	* solib.c (solib_map_sections, free_so, symbol_add_stub,
	update_solib_list, solib_add, info_shared_library_command,
	solib_address, clear_solib, solib_create_inferior_hook):  Use
	new TARGET_SO_* macros to call function on target specific
	side indirectly.